# ufrgs-fcg-tf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SUN_SHADER_DOCS.md  TODO.md  video-url.txt
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/generated_includes/: engine  game  macros
_codeql_build_dir/generated_includes/Quaternion/: Quaternion.hpp
include/: matrices.h  utils.h
include/glm/ext/: quaternion_exponential.inl  quaternion_transform.inl
include/glm/gtx/: quaternion.inl
src/: globals.hpp  main.cpp  temp_globals.hpp  textrendering.cpp
src/engine/: Cube.cpp  Cube.hpp  Curve.hpp  Drawable.cpp  Drawable.hpp  EngineController.cpp  EngineController.hpp  EventManager.cpp  EventManager.hpp  InputController.cpp  InputController.hpp  ObjDrawable.cpp  ObjDrawable.hpp  ObjLoader.cpp  ObjLoader.hpp  Shpere.cpp  TextRenderer.cpp  TextRenderer.hpp  TextRendering.cpp  TextRendering.hpp  camera.cpp  camera.hpp  controller.cpp  controller.hpp  cube.cpp  cube.hpp  drawable.hpp  engine_controller.cpp  engine_controller.hpp  event_manager.cpp  event_manager.hpp  include.hpp  input_controller.cpp  input_controller.hpp  obj_loader.hpp  shpere.cpp  sphere.hpp  vao.cpp  vao.hpp
src/engine/collision/: collisions.cpp  collisions.hpp  include.hpp
src/engine/collision/colliders/: CapsuleCollider.hpp  CylinderCollider.hpp  PointCollider.hpp  SphereCollider.hpp  include.hpp
src/engine/math/: BezierCurve.cpp  BezierCurve.hpp  CircularCurve.cpp  CircularCurve.hpp  Curve.cpp  Curve.hpp  PieceWiseBezierCurve.hpp  Quaternion.cpp  Quaternion.hpp  include.hpp  linalg.cpp  linalg.hpp  matrices.cpp  matrices.hpp  random.cpp  random.hpp
src/engine/math/curves/: BezierCurve.hpp  CircularCurve.cpp  CircularCurve.hpp  PieceWiseBezierCurve.cpp  include.hpp
src/engine/shaders/: GlowFragmentShader.glsl  GlowVertexShader.glsl  GouraudFragmentShader.glsl  GouraudVertexShader.glsl  LineFragmentShader.glsl  LineVertexShader.glsl  ParticleFragmentShader.glsl  ParticleVertexShader.glsl  PhongFragmentShader.glsl  PhongVertexShader.glsl  PlanetFragmentShader.glsl  PlanetVertexShader.glsl  StarFragmentShader.glsl  StarVertexShader.glsl  SunFragmentShader.glsl  SunVertexShader.glsl  shader_fragment.glsl  shader_vertex.glsl
src/engine/utils/: include.hpp  linalg.cpp  linalg.hpp  matrices.cpp  matrices.hpp  vec.hpp
src/engine/vobject/: Behavior.hpp  Component.cpp  Component.hpp  EStart.cpp  EStart.hpp  EUpdate.cpp  EUpdate.hpp  Scene.cpp  Scene.hpp  SceneBoot.hpp  SceneScheduler.cpp  SceneScheduler.hpp  Transform.cpp  Transform.hpp  VObject.cpp  VObject.hpp  VObjectConfig.hpp  include.hpp  transform.cpp  transform.hpp  update.hpp  vobject.hpp
src/engine/vobject/components/: Camera.cpp  Camera.hpp  Curve.cpp  Curve.hpp  DebugLineDrawable.cpp  DebugLineDrawable.hpp  Drawable.hpp  GlowDrawable.cpp  GlowDrawable.hpp  ObjDrawable.cpp  ObjDrawable.hpp  SunDrawable.cpp  SunDrawable.hpp  TextDrawable.cpp  TextDrawable.hpp  Trajectory.cpp  Trajectory.hpp  Transform.hpp  camera.cpp  camera.hpp  include.hpp  transform.hpp
src/engine/vobject/specialization/: camera.cpp  camera.hpp
src/game/: CameraController.cpp  CameraController.hpp  PlayerController.cpp  PlayerController.hpp
src/game/components/: AngularVelocity.cpp  AngularVelocity.hpp  CameraController.cpp  CameraController.hpp  FuelDisplay.cpp  FuelDisplay.hpp  Gravity.cpp  Gravity.hpp  GroundEnemyController.cpp  GroundEnemyController.hpp  GroundEnemySpawner.cpp  GroundEnemySpawner.hpp  KinematicBody.cpp  KinematicBody.hpp  PlanetInfo.hpp  PlayerComponent.hpp  PlayerController.cpp  PlayerController.hpp  SpaceshipController.cpp  SpaceshipController.hpp  SpaceshipPlayerController.cpp  SphericalInput.hpp  WalkerController.cpp  WalkerController.hpp  include.hpp
src/game/components/Drawables/: Particles.cpp  Particles.hpp  SpaceParticles.cpp  SpaceParticles.hpp  Stars.cpp  Stars.hpp  ThrustParticles.cpp  ThrustParticles.hpp  include.hpp
src/game/components/drawables/: BunnyDrawable.cpp  BunnyDrawable.hpp  Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp
src/game/components/enemies/: EnemyShipController.cpp  EnemyShipController.hpp  GroundEnemyController.cpp  GroundEnemyController.hpp  GroundEnemySpawner.hpp  include.hpp
src/game/components/physics/: AngularVelocity.cpp  AngularVelocity.hpp  Gravity.cpp  Gravity.hpp  KinematicBody.hpp  include.hpp
src/game/components/player/: CameraController.cpp  CameraController.hpp  HumanoidPlayerController.cpp  HumanoidPlayerController.hpp  PlayerController.cpp  PlayerController.hpp  PlayerShipController.cpp  PlayerShipController.hpp  PlayerSwitcherController.cpp  PlayerSwitcherController.hpp  ShipCameraController.cpp  ShipCameraController.hpp  SpaceshipCameraController.cpp  SpaceshipCameraController.hpp  SpaceshipPlayerController.cpp  SpaceshipPlayerController.hpp  SphericalCoords.hpp  SphericalInput.hpp  include.hpp
src/game/drawables/: Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp
src/game/instantiators/: Enemy.cpp  Enemy.hpp  EnemyShip.cpp  EnemyShip.hpp  SpaceshipObj.cpp  SpaceshipObj.hpp
src/game/scenes/: MainScene.cpp  MainScene.hpp  MainScene_vars.hpp
src/include/: engine.hpp  glm.hpp  macros.hpp
src/lib/: lib.cpp  lib.h  lib.hpp
src/macros/: 01_compiler_macros.hpp  02_debug.hpp  include.hpp
variants/: main-binary.cpp  main-fan.cpp  main-strip.cpp
